--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@supabase/supabase-js": "^2.45.4",
     "bulma": "^1.0.2",
     "pinia": "^2.2.4",
